# brainfc

./: Cargo.toml  README.md  benchmark.sh  out
src/: app.rs  lexer.rs  llvm_ir_gen.rs  main.rs  optimizations.rs  optimizer.rs  parser.rs  tape_functions.rs
src/llvm_ir_gen/: loops.rs  modify_block.rs  move_block.rs  read_char.rs  reset.rs  write_char.rs
src/optimizations/: base.rs  multiply.rs  reset_val.rs
tests/: comments.input  comments.output  simple_1.input
tests/ir_tests/: mandelbrot.output  simple_1.output
