[package]
name = "brainfc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
std-logger = "0.5.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"] }
clap = { version = "4.1.1", features = ["derive"] }
colored = "2.0.0"

